[package]
name = "cscs-key"
version = "1.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.43"
chrono-humanize = "0.2.3"
clap = { version = "4.5.40", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
clap_complete = "4.6.0"
comfy-table = "7.2.2"
dialoguer = "0.12.0"
directories = "6.0.0"
dirs = "6.0.0"
duration-str = "0.17.0"
env_logger = "0.11.8"
figment = { version = "0.10.19", features = ["toml"] }
humantime = "2.3.0"
log = "0.4.27"
oauth2 = "5.0.0"
openidconnect = { version = "4.0.1", features = ["reqwest-blocking"] }
os_info = "3.14.0"
qrcode = "0.14.1"
regex = "1.12.3"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
ssh-key = { version = "0.6", features = ["std"] }
toml = "0.8.23"
url = "2.5.8"
webbrowser = "1.0.6"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["blocking", "json", "rustls-tls"]
